--- a/workouts.cfg
+++ b/workouts.cfg
@@ -2,4 +2,4 @@
 
 id = "lazy_letzner"
 name = "Lazy Letzner"
-content = ["übung|45", "_STOP_|15", "übung2|45", _END_|0]
+content = ["übung|45", "PAUSE|15", "übung2|45", "END|0"]
