--- a/workouts.cfg
+++ b/workouts.cfg
@@ -2,4 +2,12 @@
 
 id = "lazy_letzner"
 name = "Lazy Letzner"
+type = "fixed"
 content = ["übung|5", "PAUSE|2", "übung2|5", "END|0"]
+
+[lol_letzner]
+
+id = "lazy_letzner"
+name = "Lazy Letzner"
+type = "custom"
+content = ["übung", "PAUSE", "übung", "END"]
